# specode_review

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: deployment.md  release-validation.md
review-kit/: spec.yaml
scripts/: install.sh  run-local.sh  verify-install.sh
src/review_agent/: __init__.py  active_attempts.py  attempt.py  campaign.py  configuration.py  coordinator.py  core.py  deadline.py  fixtures.py  github.py  lifecycle.py  lifecycle_evidence.py  live.py  models.py  ownership.py  process.py  process_manager.py  production.py  publishing.py  readiness.py  reconciliation.py  resources.py  review_runner.py  sandbox.py  submission.py  web.py  worker.py
src/specode_review/: __init__.py  accepted_revision.py  campaign.py  configuration.py  core.py  deadline.py  errors.py  fixtures.py  github.py  installation.py  lifecycle.py  lifecycle_evidence.py  live.py  models.py  process.py  production.py  publishing.py  readiness.py  resources.py  review_runner.py  sandbox.py  submission.py  verification.py  web.py
tasks/code-review-agent-v0-1/: spec-code-review-agent-v0-1.md  tickets-code-review-agent-v0-1.md
tests/: test_accepted_revision.py  test_attempt_child.py  test_attempt_command.py  test_campaign.py  test_candidate_acceptance.py  test_configuration.py  test_coordinator.py  test_fixtures.py  test_github.py  test_github_checks.py  test_installation.py  test_lifecycle_evidence.py  test_live_evidence.py  test_live_preflight.py  test_live_profile_ordering.py  test_no_model_sandbox_probe.py  test_ownership.py  test_packaging.py  test_process_manager.py  test_production.py  test_publishing.py  test_reconciliation.py  test_resources.py  test_review.py  test_review_lifecycle.py  test_review_runner.py  test_sandbox.py  test_verification.py  test_webhook.py  test_worker.py
tests/fixtures/: __init__.py  attempt_child.py  (+2 more)
tests/live/: README.md  (+2 more)
(+8 files in other folders)
