[project]
name = "review-agent"
version = "0.1.0"
description = "Bounded, exact-revision pull request review service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116,<1",
    "httpx>=0.28,<1",
    "pyjwt[crypto]>=2.10,<3",
    "pydantic>=2.12,<3",
    "uvicorn>=0.35,<1",
]

[dependency-groups]
dev = [
    "mypy>=1.18,<2",
    "pytest>=9,<10",
    "ruff>=0.14,<1",
]

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "docker_sandbox: opt-in tests that create disposable Docker Sandbox microVMs without a model call",
    "live_github: opt-in tests that use a dedicated GitHub repository and create comments",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "S105", "S106", "S310", "S603", "S607"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["review_agent"]
